--- a/includes/wiki-eats.css
+++ b/includes/wiki-eats.css
@@ -2,3 +2,12 @@ hr
 {
 	border-bottom: 1px solid #ccc;
 }
+.carousel-inner h3, .carousel-inner p
+{
+	color: #000;
+	text-shadow: 
+    	-1px -1px 0 #FFF,
+    	1px -1px 0 #FFF,
+    	-1px 1px 0 #FFF,
+    	1px 1px 0 #FFF;
+}
