--- a/AboutCss.css
+++ b/AboutCss.css
@@ -1,6 +1,16 @@
 h1{
 	font-family: 'Lobster', cursive;
 	font-size:9em;
+	padding-bottom: 0.1em;
+}
+h1 small
+{
+	font-size: 0.5em;
+}
+h1 br
+{
+	display: block;
+	margin: -0.5em 0;
 }
 
 #description{
@@ -28,8 +38,8 @@ h2{
 
 }
 #images{
-	float:left; 
-	display:inline; 
+	float:left; /*
+	display:inline; */
 	width:49%;
 }
 
