--- a/css/AboutCss.css
+++ b/css/AboutCss.css
@@ -16,7 +16,7 @@
 #description h2
 {
 	font-size: 4em;
-	font-family: "Arial";
+	font-family: "Arial","Times New Roman";
 	font-variant: small-caps;
 	font-weight: bold;
 }
